Changes in ActiveCLientList,CommonClass,WorkinProcess forms
Changes in ActiveCLientList,CommonClass,WorkinProcess forms

--- a/CRM/CRM/AdminForms/PdfInvoice.html
+++ b/CRM/CRM/AdminForms/PdfInvoice.html
@@ -12,7 +12,7 @@
         <div class="page-header" style="text-align: center;">
             <!--<h1>Simple Invoice <small>Bootstrap template, demonstrating a simple invoice.</small></h1>-->
             <!--<img src="<img src="http://localhost:25841/assets/dist/img/logo.jpg" />" />-->
-            {Image}
+            <img src="http://localhost:25841/assets/dist/img/logo.jpg" />
         </div>
         <!-- Simple Invoice - START -->
         <div class="container">
@@ -48,10 +48,12 @@
                             <div class="panel panel-default height">
                                 <div class="panel-heading" style="text-align:center; font-weight:bold;">Company Information</div>
                                 <div class="panel-body">
-                                    <h5 style="margin-top: 0px;margin-bottom: 0px;">{CompanyName}</h5>
+                                    <h5 style="margin-top: 0px;margin-bottom: 0px;">Activ8</h5>
                                     <br />
-                                    {address}<br />
-                                    {City}{State}{Country}<br />
+                                    33 Martin Hammerschlag Way
+                                    Foreshore
+                                         <br />
+                                    Cape Town, South Africa.  <br />
                                 </div>
                             </div>
                         </div>
