--- a/CRM/CRM/AdminForms/PdfInvoice.html
+++ b/CRM/CRM/AdminForms/PdfInvoice.html
@@ -25,26 +25,35 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-xs-12 col-md-3 col-lg-3 pull-left">
+                        <div class="col-xs-12 col-md-4 col-lg-3 pull-left">
                             <div class="panel panel-default height">
                                 <div class="panel-heading" style="text-align:center; font-weight:bold;">Billing Details</div>
                                 <div class="panel-body">
                                     <table>
                                         <tr>
-                                            <td style="font-weight: bold; text-align: left;">Client Name  </td>
+                                            <td style="font-weight:bold;text-align:left">
+                                                Client Name
+                                            </td>
                                             <td>:</td>
-                                            <td align="left">{ClientName}</td>
+                                            <td align="left">
+                                                {ClientName}
+                                            </td>                                          
                                         </tr>
+                                        
                                         <tr>
-                                            <td style="font-weight: bold; text-align: left;">Client SAID </td>
+                                            <td style="font-weight:bold;text-align:left">
+                                                Client SAID
+                                            </td>
                                             <td>:</td>
-                                            <td align="left" width="5px;">{ClientSAID}</td>
+                                            <td align="left">
+                                                {ClientSAID}
+                                            </td>  
                                         </tr>
                                         </table>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-md-5 col-lg-5">
+                        <div class="col-xs-12 col-md-4 col-lg-5">
                             <div class="panel panel-default height">
                                 <div class="panel-heading" style="text-align:center; font-weight:bold;">Company Information</div>
                                 <div class="panel-body">
@@ -73,15 +82,23 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;text-align:left;">Date   </td>
+                                            <td style="font-weight:bold;text-align:left">
+                                                Date
+                                            </td>
                                             <td>:</td>
-                                            <td align="left">{InvoiceDate}</td>
+                                            <td align="left">
+                                                {InvoiceDate}
+                                            </td>                                           
                                         </tr>
                                        
                                         <tr>
-                                            <td style="font-weight: bold; text-align: left;">Service Name </td>
+                                            <td style="font-weight:bold;text-align:left">
+                                                Service Name
+                                            </td>
                                             <td>:</td>
-                                            <td align="left" width="5px;">{ServiceName}</td>
+                                            <td align="left">
+                                                {ServiceName}
+                                            </td>                                              
                                         </tr>
                                     </table>
                                 </div>
