changes in Director forms,PdfInvoice,Workin Process
Changes in Director forms in ClientForms and clientprofile,PdfInvoice,WorkinProcess

--- a/CRM/CRM/AdminForms/PdfInvoice.html
+++ b/CRM/CRM/AdminForms/PdfInvoice.html
@@ -5,14 +5,13 @@
     <title>Invoice</title>
     <link rel="stylesheet" type="text/css" href="http://finlite.dinoosys.in/HtmlTemps/bootstrap.min.css" />
 
-
 </head>
 <body>
     <div class="container ">
         <div class="page-header" style="text-align: center;">
             <!--<h1>Simple Invoice <small>Bootstrap template, demonstrating a simple invoice.</small></h1>-->
             <!--<img src="<img src="http://localhost:25841/assets/dist/img/logo.jpg" />" />-->
-            <img src="http://localhost:25841/assets/dist/img/logo.jpg" />
+            <img src="http://crmadm.dinoosystech.com/assets/dist/img/logo.jpg" />
         </div>
         <!-- Simple Invoice - START -->
         <div class="container">
@@ -116,7 +115,7 @@
                         </div>
                         <div class="panel-body">
                             <div class="table-responsive">
-                                <table style="width:99%" class="table table-condensed">
+                                <table style="width:99%" class="table table-condensed" id="team-list">
                                     {MainRows}
                                 </table>
                             </div>
