--- a/CRM/CRM/AdminForms/PdfInvoice.html
+++ b/CRM/CRM/AdminForms/PdfInvoice.html
@@ -56,7 +56,7 @@
                             <div class="panel panel-default height">
                                 <div class="panel-heading" style="text-align:center; font-weight:bold;">Company Information</div>
                                 <div class="panel-body">
-                                    <h5 style="margin-top: 0px;margin-bottom: 0px;">Activ8</h5>
+                                    <h5 style="margin-top: 0px;margin-bottom: 0px;">Activ8 CAPITAL MANAGEMENT</h5>
                                     <br />
                                     33 Martin Hammerschlag Way
                                     Foreshore
